--- a/apiserver/build.gradle
+++ b/apiserver/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.7'
@@ -39,8 +46,25 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+
+    annotationProcessor(
+
+
+            "jakarta.persistence:jakarta.persistence-api",
+
+
+            "jakarta.annotation:jakarta.annotation-api",
+
+
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava.dependsOn('clean')
